# ai-agent

./: README.md  requirements.txt
aihero/course/: main.py  openAI.py  pyproject.toml
aihero/course/.ipynb_checkpoints/: main-checkpoint.py
aihero/eval/: data-gen.py  evaluations.py
aihero/project/: README.md  app.py  ingest.py  main.py  pyproject.toml  search_agent.py  search_tool.py
aihero/project/eval/: data-gen.py  evaluations.py
